// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlashCard renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-gsDKAQ kJFAjl"
      >
        <div
          class="sc-dkPtRN hlrovN"
        >
          <div
            class="sc-hKwDye diXGel"
          >
            <h4
              class="sc-jRQBWg jzpGpk"
            />
          </div>
          <div
            class="sc-hKwDye sc-eCImPb diXGel bcEjmK"
          >
            <ol
              class="sc-gKclnd fRGKkQ"
            >
              <li
                class="sc-bdvvtL ituqsN"
              />
            </ol>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-gsDKAQ kJFAjl"
    >
      <div
        class="sc-dkPtRN hlrovN"
      >
        <div
          class="sc-hKwDye diXGel"
        >
          <h4
            class="sc-jRQBWg jzpGpk"
          />
        </div>
        <div
          class="sc-hKwDye sc-eCImPb diXGel bcEjmK"
        >
          <ol
            class="sc-gKclnd fRGKkQ"
          >
            <li
              class="sc-bdvvtL ituqsN"
            />
          </ol>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FlashCard shows some answers 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-gsDKAQ kJFAjl"
      >
        <div
          class="sc-dkPtRN hlrovN"
        >
          <div
            class="sc-hKwDye diXGel"
          >
            <h4
              class="sc-jRQBWg jzpGpk"
            >
              What is the form of government of the United States?
            </h4>
          </div>
          <div
            class="sc-hKwDye sc-eCImPb diXGel bcEjmK"
          >
            <ol
              class="sc-gKclnd fRGKkQ"
            >
              <li
                class="sc-bdvvtL ituqsN"
              >
                Republic
                Constitution-based federal republic
                Representative democracy
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-gsDKAQ kJFAjl"
    >
      <div
        class="sc-dkPtRN hlrovN"
      >
        <div
          class="sc-hKwDye diXGel"
        >
          <h4
            class="sc-jRQBWg jzpGpk"
          >
            What is the form of government of the United States?
          </h4>
        </div>
        <div
          class="sc-hKwDye sc-eCImPb diXGel bcEjmK"
        >
          <ol
            class="sc-gKclnd fRGKkQ"
          >
            <li
              class="sc-bdvvtL ituqsN"
            >
              Republic
              Constitution-based federal republic
              Representative democracy
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
